# estuary

./: .env.example  .gitignore  Cargo.toml  Development.md  Notes.md  Procfile  README.md  estuary.code-workspace  example.Dockerfile  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yaml
src/: cli.rs  errors.rs  handlers.rs  index.rs  main.rs  package_index.rs  storage.rs  test_helpers.rs
src/database/: mod.rs
src/handlers/: frontend.rs  git.rs  registry.rs
styles/: main.dist.css  tailwind.css
templates/: base.html  crate_detail.html  crate_version_list.html  landing.html  login.html
test_data/: publish-my-crate-body
