[package]
name = "estuary"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-files = "0.4.1"
anyhow = "1.0"
byteorder = "1.3"
dotenv = "0.15"
env_logger = "0.8"
git2 = "0.13"
log = "0.4"
serde = { version = "1.0", features = [ "derive", ] }
serde_json = "1.0"
sha2 = "0.9"

[dev-dependencies]
tempdir = "0.3.7"
