[package]
name = "estuary"
version = "0.1.0-alpha"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"
description = "An alternative cargo registry suitable for *small-scale* crate publishing and distribution."
repository = "https://github.com/onelson/estuary"
homepage = "https://github.com/onelson/estuary"
keywords = ["registry", "packaging", "dependencies", "index"]
categories = ["web-programming::http-server", "development-tools", "rust-patterns"]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-files = "0.4"
anyhow = "1.0"
byteorder = "1.3"
dotenv = "0.15"
env_logger = "0.8"
git2 = "0.13"
log = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.9"

[dev-dependencies]
tempdir = "0.3"
actix-rt = "1.1"
