[package]
name = "estuary"
version = "0.1.1"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"
description = "An alternative cargo registry suitable for *small-scale* crate publishing and distribution."
repository = "https://github.com/onelson/estuary"
homepage = "https://github.com/onelson/estuary"
keywords = ["registry", "packaging", "dependencies", "index"]
categories = ["web-programming::http-server", "development-tools", "rust-patterns"]
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.4.1"
askama = { version = "0.10.5", features = ["with-actix-web"] }
askama_actix = "0.11.1"
byteorder = "1.3.4"
dotenv = { version = "0.15.0", optional = true }
env_logger = "0.8.2"
git2 = "0.13.12"
log = "0.4.11"
semver = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.9.2"
structopt = "0.3.21"
thiserror = "1.0.23"
glob = "0.3.0"

[dev-dependencies]
tempdir = "0.3.7"
actix-rt = "1.1.1"
